# Multi-Agent-Tool-Use-Conversation-Generator

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
data/: README.md
data/sample_toolbench/Travel/: flights.json  hotels.json
data/sample_toolbench/Weather/: forecast.json
examples/: diversity_results.md  sample_conversations.jsonl  sample_experiment_report.json
scratch/: failed_prompts.md
scripts/: run_diversity_experiment.py
src/convgen/: cli.py  io.py  orchestrator.py
src/convgen/agents/: assistant.py  planner.py  user.py
src/convgen/executor/: mock.py
src/convgen/graph/: builder.py  sampler.py
src/convgen/judge/: judge.py  repair.py
src/convgen/llm/: __init__.py  client.py
src/convgen/registry/: loader.py  models.py
src/convgen/steering/: metrics.py  tracker.py
tests/: conftest.py  test_assistant.py  test_cli.py  test_e2e.py  test_executor.py  test_graph.py  test_io.py  test_judge.py  test_llm.py  test_loader.py  test_metrics.py  test_models.py  test_orchestrator.py  test_planner.py  test_repair.py  test_sampler.py  test_steering.py  test_user.py
